5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2506.log
== TEST (2019-05-16 16:40:36) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pt = qi
while pt <= qm:
	pt = (pt + (pt * pc)) - ra
	if pt == qi:
		print("LIMITE")
	else:
		print("EXTINCAO")
	
	
-- OUTPUT:
EXTINCAO
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:45:37) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pt = qi
pr = 0
anos = 0
while pr < qm:
	pt = (pt + (pt * pc)) 
	pr= pt- ra
	anos = anos + 1
if pr == qm:
	print("LIMITE")
	print(anos)
elif pr < qi:
	print("EXTINCAO")
	print(anos)

	
	
-- OUTPUT:
EXTINCAO
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:09) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pt = qi
pr = 0
anos = 0
while pr < qm:
	pt = (pt + (pt * pc)) 
	pr= pt- ra
	anos = anos + 1
	if pr == qm:
		print("LIMITE")
		print(anos)
	elif pr < qi:
		print("EXTINCAO")
		print(anos)

-- OUTPUT:
EXTINCAO
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:27) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pt = qi
pr = 0
anos = 0
while pr <= qm:
	pt = (pt + (pt * pc)) 
	pr= pt- ra
	anos = anos + 1
	if pr == qm:
		print("LIMITE")
		print(anos)
	elif pr < 0:
		print("EXTINCAO")
		print(anos)

-- OUTPUT:
EXTINCAO
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:58) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
pr = 0
anos = 0
while pr <= qm:
	pt = (pt + (pt * pc)) 
	pr = pt- ra
	anos = anos + 1
	if pr == qm:
		print("LIMITE")
		print(anos)
	elif pr < 0:
		print("EXTINCAO")
		print(anos)

-- OUTPUT:
EXTINCAO
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:33) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
pr = 0
anos = 0
while pr <= qm:
	pt = (pt + (pt * pc)) 
	pr = pt- ra
	anos = anos + 1
print(anos)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:53:49) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
pr = 0
anos = 0
while pr>0 and pr<=qm:
	pt = (pt + (pt * pc)) 
	pr = pt- ra
	anos = anos + 1
if pr == qm:
	print("LIMITE")
	print(anos)
else:
	print("EXTINCAO")
	print(anos)
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:28) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
pr = 0
anos = 0
while pr>=0 and pr<=qm:
	pt = (pt + (pt * pc)) 
	pr = pt- ra
	anos = anos + 1
if pr == qm:
	print("LIMITE")
	print(anos)
else:
	print("EXTINCAO")
	print(anos)
-- OUTPUT:
EXTINCAO
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:23) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
anos = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	anos = anos + 1
if pr >= qm:
	print("LIMITE")
	print(anos)
if pr <= 0:
	print("EXTINCAO")
	print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if pr >= qm:
NameError: name 'pr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:40) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
anos = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	anos = anos + 1
if pt >= qm:
	print("LIMITE")
	print(anos)
if pr <= 0:
	print("EXTINCAO")
	print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if pr <= 0:
NameError: name 'pr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:47) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
anos = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	anos = anos + 1
if pt >= qm:
	print("LIMITE")
	print(anos)
if pt <= 0:
	print("EXTINCAO")
	print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:58:00) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento: "))
ra = int(input("Retirada de peixes: "))
qm = 12000
pc = pc/100
pt = qi
anos = 0
while pt>=0 and pt<=qm:
	pt = (pt + (pt * pc)) -ra
	anos = anos + 1
if pt >= qm:
	print("LIMITE")
	print(anos)
if pt <= 0:
	print("EXTINCAO")
	print(anos)
-- EXECUTION TIME:
0.139855
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
